# pickup

./: .gitignore  LICENSE  MUSIC_CREDITS  Makefile  README  README.md  TODO  deploy-pi  go.mod  go.sum  main.go  pickup.code-workspace  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yaml  go-ci.yaml  rust_ci.yaml  rust_release.yml
config/: config.go
go/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go
go/frontend/: eslint.config.js  index.html  package.json  vite.config.js
go/handlers/: albums.go  json.go
go/model/: path.go
go/player/: mpd_refresh.go
handlers/: albums.go  artists.go  category.go  collection.go  control.go  index.go  json.go  main.go  messages.go  playlist.go
init.d/: pickup
model/: model.go  persist.go  refresh.go  refresh_mpd.go  search.go
music/_Free/: Bryan Teoh
pickup-rust/: Cargo.toml
pickup-rust/src/: app_state.rs  index.rs  lib.rs  main.rs  player.rs
pickup-rust/src/api/: control.rs  index.rs  list.rs  mod.rs
pickup-rust/src/filemanager/: cache.rs  collection.rs  list.rs  mod.rs  model.rs  options.rs  utils.rs
pickup-rust/src/player/: commands.rs  mod.rs
pickup-rust/tests/: helpers.rs
player/: control.go  mpd_control.go  mpd_player.go  mpd_playlist.go  player.go  playlist.go
react/: .eslintrc.js  jsconfig.json  package-lock.json  package.json  rome.json  vite.config.js  webpack.config.js
rs/: .gitignore  Cargo.toml
rs/src/: app_state.rs  cli.rs  error.rs  lib.rs  main.rs
rs/src/api/: control.rs  index.rs  list.rs  mod.rs  queue.rs
rs/src/filemanager/: cache.rs  collection.rs  collection_builder.rs  dto.rs  list.rs  mod.rs  model.rs  utils.rs
rs/src/player/: mod.rs
rs/src/queue/: mod.rs
rs/tests/: filemanager.rs  index_e2e.rs  list_e2e.rs  queue_e2e.rs
rs/tests/helpers/: mod.rs
static/: albums.js  artists.js  categories.js  control.js  index.html  pickup.css  pickup.js  playlist.js  routes.js
(+28 files in other folders)
