[package]
name = "pickup"
version = "0.1.0"
authors = ["Andy O'Neill <andy@potatoriot.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
bincode = "^1"
clap = { version = "^4", features = ["derive"] }
env_logger = "^0"
log = "^0"
rodio = "^0"
sled = "^0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
walkdir = "2"
rand = "0.8.5"
regex = "1.6.0"
lazy_static = "1.4.0"
itertools = "0.10.5"

[dev-dependencies]
assert_matches = "1.5.0"

