[package]
name = "pickup"
version = "0.1.0"
authors = ["Andy O'Neill <andy@potatoriot.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
bincode = "^1"
clap = { version = "^4", features = ["derive"] }
env_logger = "^0"
log = "^0"
rodio = "^0"
sled = "^0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
walkdir = "^2"
rand = "^0"
regex = "^1"
lazy_static = "^1"

[dev-dependencies]
assert_matches = "^1"

